# blog

./: .gitignore  .sosrc  Dockerfile  blog.cabal  buildspec.yml  docker-compose.yml  stack.yaml
app/: Main.hs  Reader.hs
site/css/: prism.css  style.css
site/data/: personal-info.yaml
site/js/: prism.js
site/posts/: rxjs-patterns.md  transducers-clojure.md  why-clojure.md  why-toml.md
site/posts/photos/: joshua-tree.md  monteray.md
site/templates/: header.html  include.html  index.html  item-list.html  meta-data.html  photo-list.html  post.html  rss.xml  social-profile.html  social.html  tag.html
